# task-manager

./: .gitignore  pyproject.toml
infra/: docker-compose.yml  start_infra.sh
multitenant_task_manager/core/: middleware.py  settings.py  urls.py
multitenant_task_manager/customers/: admin.py  models.py
multitenant_task_manager/customers/migrations/: 0001_initial.py
multitenant_task_manager/kanban_board/: apps.py  permissions.py  serializers.py  urls.py  views.py
multitenant_task_manager/kanban_board/migrations/: 0001_initial.py
multitenant_task_manager/kanban_board/models/: __init__.py  board.py  task.py  task_list.py
